# modules/catalog/presentations/routes.go
@@ -6,6 +6,7 @@ import (
 
 func Register(protected gin.IRouter, h *Handler) {
 	protected.GET("/catalog/presentations", h.List)
+	protected.POST("/catalog/presentations", h.Create)
 	protected.GET("/catalog/presentations/:id", h.GetByID)
 	protected.POST("/catalog/presentations/page", h.Page)
 	protected.PUT("/catalog/presentations/:id", h.Update)
